mozreview: Commit table overflows when window size is not "large enough" (bug 1203794) r=mcote
We need to increase the minimum size of the commits table to account for the
width of the Hg column.

--HG--
extra : commitid : F2Wu9SsbcEH
extra : rebase_source : e2b4a4525979343cfa515fc1c34ad535fdaf91b7
extra : amend_source : 4d27241486d7d31c762df5a83e3996c3c907eccf

--- a/pylib/mozreview/mozreview/static/mozreview/css/commits.less
+++ b/pylib/mozreview/mozreview/static/mozreview/css/commits.less
@@ -26,7 +26,7 @@
   border-spacing: 0px;
   border-collapse: collapse;
   margin-top:10px;
-  min-width: 600px;
+  min-width: 618px;
   border-top: 1px solid #C1C1C1;
   border-right: 1px solid #C1C1C1;
 
